--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,7 +58,6 @@
     <string name="terms_and_conditions"> Terms And Conditions</string>
 
 
-
     <!-- VERIFY PASSWORD PAGE !-->
     <string name="verify_password">  Verify Password </string>
     <string name="verify_password_subtext"> Keep your account safe, please verify your </string>
@@ -67,4 +66,13 @@
     <string name="current_password"> Current Password</string>
     <string name="continue_password"> Continue </string>
     <string name="forgot_password_settings"> <u> Forgot Password?</u> </string>
+    <string name="reset_password"> Reset Password</string>
+    <string name="new_password"> New Password</string>
+    <string name="confirm_password"> Confirm Password</string>
+
+
+    <!-- RESET PASSWORD !-->
+    
+    <string name="select_channel"> Select the channel you wish to reset your </string>
+    <string name="select_channel2"> password: </string>
 </resources>
