Recipe loading data from database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,4 +113,6 @@
     <string name="soup">  Soup Icon</string>
     <string name="yellow_container">  Yellow Container Shape</string>
     <string name="noodles">  Noodles Icon</string>
+
+    <string name="linebar"> ____________________________________________________________  </string>
 </resources>
